# glfw_opengl_boilerplate

./: CMakeLists.txt
src/: main.cpp
